--- a/styles.css
+++ b/styles.css
@@ -140,7 +140,13 @@
 /* ------------------------ IDS - */
       #map {
         height: 100%;
+        width:auto;
+      }
+      .map-wrapper{
+        height: 100%;
         width: auto;
+      
+
       }
 
       #side-home {
@@ -186,3 +192,19 @@
         text-align: center;
         width: 100%;
       }
+      /*---SLIDER-----*/
+      .slider {
+    width: auto;
+    height: auto;
+    border-radius: 5px;  
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+}
+.slider:hover {
+    opacity: 1;
+}
+.slidecontainer {
+    top: 50%;
+    left: 50%;
+}
