Slider changes color shade
Slider directly changes the shade of color

--- a/styles.css
+++ b/styles.css
@@ -180,7 +180,7 @@
         background: #e6e6e6;
       }
 
-      #BikeButton, #TrafficButton, #GreenButton {
+      #BikeButton, #TrafficButton, #GreenButton, #ParkingButton {
         display: inline;
         clear: right;
         float: right;
