--- a/styles.css
+++ b/styles.css
@@ -153,11 +153,12 @@
       }
 
 /* ------------------------ IDS - */
-      #container-map {
+      .container-map {
         height: 100%;
         width: 100%;
         right: 0;
         z-index: 0;
+        
       }
 
       #map {
@@ -176,6 +177,26 @@
         z-index: 999;
         display: none;
         text-align: center;
+      }
+      /*slider*/
+      .slidecontainer {
+       width: 250px;
+        position: absolute;
+        bottom: 300;
+        right:  300;
+        background: RGB(255, 255, 255); /* Transparency doesn't work on Safari */
+        margin-bottom: 25px;
+        margin-right: 15px;
+        z-index: 999;
+        text-align: center;
+      }
+      .slider {
+        width: auto;
+        height: auto;
+        border-radius: 5px;  
+        background: #d3d3d3;
+        outline: none;
+        opacity: 0.7;
       }
 
       #side-home {
