--- a/styles.css
+++ b/styles.css
@@ -46,10 +46,6 @@
         fill: #b8b8b8;
       }
 
-      .navlist:hover {
-        color: RGB(0, 120, 200); 
-        fill: RGB(0, 120, 200);
-      }
       .navlist:active {
         background: RGB(0, 120, 200);
         color: #FFFFFF;
@@ -152,6 +148,27 @@
         display: block;
       }
 
+      /*slider*/
+      .slidecontainer {
+        width: 250px;
+        position: absolute;
+		bottom: 0;
+		right: 0;
+        background: RGB(255, 255, 255);
+        margin-bottom: 25px;
+        margin-right: 15px;
+        z-index: 999;
+        text-align: center;
+      }
+      .slider {
+        width: auto;
+        height: auto;
+        border-radius: 5px;  
+        background: #d3d3d3;
+        outline: none;
+        opacity: 0.7;
+      }
+
 /* ------------------------ IDS - */
       .container-map {
         height: 100%;
@@ -169,34 +186,14 @@
       #container-legend {
         width: 100px;
         position: absolute;
-        bottom: 0;
-        right: 0;
+		top:0;
+		right: 0;
         background: RGB(255, 255, 255); /* Transparency doesn't work on Safari */
-        margin-bottom: 25px;
+        margin-top: 15px;
         margin-right: 15px;
         z-index: 999;
         display: none;
         text-align: center;
-      }
-      /*slider*/
-      .slidecontainer {
-       width: 250px;
-        position: absolute;
-        bottom: 300;
-        right:  300;
-        background: RGB(255, 255, 255); /* Transparency doesn't work on Safari */
-        margin-bottom: 25px;
-        margin-right: 15px;
-        z-index: 999;
-        text-align: center;
-      }
-      .slider {
-        width: auto;
-        height: auto;
-        border-radius: 5px;  
-        background: #d3d3d3;
-        outline: none;
-        opacity: 0.7;
       }
 
       #side-home {
