--- a/styles.css
+++ b/styles.css
@@ -8,12 +8,12 @@
       nav {
         width: 5%
         min-width: 4em;
-		    max-width: 5em;
+		max-width: 5em;
       }
 
       nav ul{
         text-align: center;
-		    width: 6em;
+		width: 6em;
       }
       nav ul li{
         padding-top: 18px;
@@ -23,10 +23,12 @@
       nav li svg {
         padding: 0;
       }
+/*
 
       div li {
         background: white;
       }
+*/
       
       div li p{
         margin: 16px;
@@ -41,7 +43,11 @@
         font-family: Arial;
       }
 /* ------------------------ CLASSES - */
-	    .navlist {
+	  .context-menu li {
+		background: white
+	  }
+
+	  .navlist {
         color: #b8b8b8;
         fill: #b8b8b8;
       }
@@ -72,11 +78,13 @@
         display: grid;
         align-items: center;
         justify-content: center;
+		background: #FFFFFF;
       }
 
       .nav-menu {
         list-style-type: none;
         padding-left: 0;
+		background: #FFFFFF;
       }
 
       .material-icons.md-18 { font-size: 18px; }
@@ -93,6 +101,7 @@
 
       .side {
         min-width: 18em;
+		display: flex;
       }
 
       .context-menu {
@@ -157,7 +166,7 @@
         background: RGB(255, 255, 255);
         margin-bottom: 25px;
         margin-right: 15px;
-        z-index: 999;
+        z-index: 1;
         text-align: center;
       }
       .slider {
@@ -169,18 +178,40 @@
         opacity: 0.7;
       }
 
-/* ------------------------ IDS - */
       .container-map {
         height: 100%;
         width: 100%;
         right: 0;
         z-index: 0;
-        
       }
+
+/* ------------------------ IDS - */
 
       #map {
         height: 100%;
         width: auto;
+      }
+
+	  #tutorial {
+		background: RGB(64, 64, 64, 0.8);
+		position: absolute;
+		width: 70%;
+		right: 0;
+		height: 100%;
+		display: flex;
+		z-index: 2;
+		justify-content: center;
+		align-items: center;
+	  }
+
+	  #tutorial-content {
+		color: white;
+		list-style-type: none;
+		text-align: center;
+	  }
+
+	  #tutorial-content p {
+		margin: 0;
       }
 
       #container-legend {
@@ -191,7 +222,7 @@
         background: RGB(255, 255, 255); /* Transparency doesn't work on Safari */
         margin-top: 15px;
         margin-right: 15px;
-        z-index: 999;
+        z-index: 1;
         display: none;
         text-align: center;
       }
@@ -200,17 +231,15 @@
         height: 100%;
         width: 25%;
         float: left;
-        display: flex;
         justify-content: center;
         align-items: center;
-		    background: #FFFFFF;
+		background: #FFFFFF;
       }
 
       #side-living {
         height: 100%;
         width: 25%;
         float: left;
-        display: flex;
         justify-content: center;
         align-items: center;
         display: none;
@@ -221,7 +250,6 @@
         height: 100%;
         width: 25%;
         float: left;
-        display: flex;
         justify-content: center;
         align-items: center;
         display: none;
@@ -232,7 +260,6 @@
         height: 100%;
         width: 25%;
         float: left;
-        display: flex;
         justify-content: center;
         align-items: center;
         display: none;
@@ -243,7 +270,6 @@
         height: 100%;
         width: 25%;
         float: left;
-        display: flex;
         justify-content: center;
         align-items: center;
         display: none;
@@ -254,7 +280,6 @@
         height: 100%;
         width: 25%;
         float: left;
-        display: flex;
         justify-content: center;
         align-items: center;
         display: none;
@@ -265,7 +290,6 @@
         height: 100%;
         width: 25%;
         float: left;
-        display: flex;
         justify-content: center;
         align-items: center;
         display: none;
@@ -294,3 +318,4 @@
 		width: 4em;
 		content:url("https://i.imgur.com/qnh4gZ3.png");
       }
+
