--- a/styles.css
+++ b/styles.css
@@ -36,12 +36,13 @@
       }
 
       h1, h2, h3, h4, h5, h6, label {
-        font-family: Arial;
+        font-family: 'Lato', sans-serif;
       }
 
       p {
-        font-family: Arial;
+        font-family: 'Lato', sans-serif;
 		font-size: 14px;
+
       }
 
 /* ------------------------ CLASSES - */
@@ -106,6 +107,7 @@
 
       .material-icons.md-48 { 
         font-size: 48px;
+		 
       } 
 
       .material-icons.wrap {
@@ -115,6 +117,8 @@
       .side {
         min-width: 18em;
 		display: flex;
+		color: #707070;
+
       }
 
       .context-menu {
@@ -181,6 +185,7 @@
         margin-right: 15px;
         z-index: 1;
         text-align: center;
+		color: #707070;
       }
       .slider {
         width: auto;
@@ -216,7 +221,7 @@
   background: RGB(255, 255, 255); /* Transparency doesn't work on Safari */
   margin-top: 15px;
   margin-right: 15px;
-  z-index: 999;
+  z-index: 1;
   text-align: center;
 }      
     #wrapper {
@@ -321,7 +326,6 @@
         width: 35%;
         float: left;
         justify-content: center;
-        align-items: center;
         display: none;
         background: #FFFFFF;
       }
@@ -331,7 +335,6 @@
         width: 35%;
         float: left;
         justify-content: center;
-        align-items: center;
         display: none;
         background: #FFFFFF;
       }
@@ -341,7 +344,6 @@
         width: 35%;
         float: left;
         justify-content: center;
-        align-items: center;
         display: none;
         background: #FFFFFF;
       }
@@ -351,7 +353,6 @@
         width: 35%;
         float: left;
         justify-content: center;
-        align-items: center;
         display: none;
         background: #FFFFFF;
       }
@@ -361,7 +362,6 @@
         width: 35%;
         float: left;
         justify-content: center;
-        align-items: center;
         display: none;
         background: #FFFFFF;
       }
@@ -371,12 +371,11 @@
         width: 35%;
         float: left;
         justify-content: center;
-        align-items: center;
         display: none;
         background: #FFFFFF;
       }
 
-      #BikeButton, #TrafficButton, #GreenButton, #ParkingButton, #NeighbourhoodsButton, #DistrictsButton {
+      #BikeButton, #TrafficButton, #GreenButton, #ParkingButton, #NeighbourhoodsButton, #DistrictsButton, #BusinessesButton, #StoresButton, #SupermarketsButton {
         display: inline;
         clear: right;
         float: right;
@@ -384,7 +383,7 @@
       }
 
       #homeHeading {
-        text-align: center;
+		padding-left: 16px;
         width: 100%;
 		clear: both;
       }
