--- a/styles.css
+++ b/styles.css
@@ -303,14 +303,16 @@
       #container-legend {
         width: 100px;
         position: absolute;
-		top:0;
+		bottom:0;
 		right: 0;
         background: RGB(255, 255, 255); /* Transparency doesn't work on Safari */
         margin-top: 15px;
-        margin-right: 15px;
+        margin-right: 282px	;
+		margin-bottom: 25px;
         z-index: 1;
         display: none;
         text-align: center;
+		color: #707070;
       }
 
       #side-home {
